Fixed form alignment on mobile screens

--- a/assets/src/css/edd-form.css
+++ b/assets/src/css/edd-form.css
@@ -8,7 +8,7 @@
         }
 
         p {
-            @apply flex;
+            @apply grid md:flex;
 
             label {
                 @apply self-center mr-4 font-semibold grow-0 shrink-0 basis-3xs;
